# foundry-vox

./: .gitignore  PRD.md  README.md  foundry-vox-mockup.jsx  package-lock.json  package.json
.claude/: launch.json
backend/: README.md  benchmark_mlx_rtf.py  engine_baseline.json  foundry_vox_backend.spec  pyproject.toml  verify_preset_assets.py
backend/app/: __init__.py  audio.py  config.py  database.py  engine.py  errors.py  main.py  models.py  quality_presets.py  services.py
backend/app/mlx_tada/: convert_weights.py  decoder.py  diffusion.py  generate.py  hybrid.py  llm.py
backend/app/presets/: voices.json
backend/app/routes/: export.py  generate.py  health.py  history.py  settings.py  voices.py
docs/: app-store-preflight-foundry-vox.md  app-store-rejection-map.md  app-store-review-notes-template.md  app-store-runbook.md  engine-lockdown.md  preset-asset-rights.json  preset-asset-rights.md  privacy-metadata-consistency.md  privacy-policy.md  public-links.md  release.md  same-mac-clean-validation.md  support.md  user-guidance.md
docs/licenses/: LLAMA-3.2-COMMUNITY-LICENSE.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
scripts/: build-sidecar.sh  package_appstore.sh
shared/: quality-presets.json
src-tauri/: Cargo.toml  entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/backend/: README.txt
src-tauri/src/: main.rs
(+11 files in other folders)
