[package]
name = "foundry-vox"
version = "0.1.0"
description = "Offline macOS text-to-speech app powered by local TADA inference."
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"

